tests/fixtures/guardrails/invalid/webhook-inline-local-business-logic/app/routes/webhooks.app.uninstalled.ts
export async function action() {
  const payload = { topic: "app/uninstalled" };
  return payload.topic.toUpperCase();
}
